--- a/back/blog/templates/blog/base.html
+++ b/back/blog/templates/blog/base.html
@@ -26,7 +26,7 @@
               <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
             </div>
             <!-- Navbar Right Side -->
-            <!--<div class="navbar-nav"> https://www.canva.com/templates/resumes/MAB5W_JCHnA-minimal-professional-resume/
+            <!-- <div class="navbar-nav">
                 {% if user.is_authenticated %}
                     <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
                     <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
@@ -35,7 +35,7 @@
                   <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
                   <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
                 {% endif %}
-            </div>-->
+            </div> -->
           </div>
         </div>
     </nav>
@@ -57,7 +57,7 @@
           {% endif %}
           {% block content %}{% endblock %}
         </div>
-        <!--<div class="col-md-4">
+        <div class="col-md-4">
           <div class="content-section">
             <h3>Our Sidebar</h3>
             <p class='text-muted'>You can put any information here you'd like.
@@ -69,7 +69,7 @@
               </ul>
             </p>
           </div>
-        </div>-->
+        </div>
       </div>
     </main>
 
